--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,8 @@ jobs:
         pip install pipenv
         if [ -f Pipfile.lock ]; then pipenv install --ignore-pipfile; fi
         pipenv install pytest --dev
+        pipenv install flake8
     - name: Lint with flake8
       run: |
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        pipenv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        pipenv flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
