--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Lint with flake8
       run: |
         pipenv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        pipenv flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        pipenv run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
