lock to tensorflow 2.2 version and comment out all scripts bar mnist

--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,8 @@ name = "pypi"
 numpy = "*"
 keras = "*"
 matplotlib = "*"
-tensorflow = "*"
 opencv-python = "*"
+tensorflow = "==2.2"
 
 [dev-packages]
 
