--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,3 +31,6 @@ jobs:
       run: |
         pipenv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         pipenv run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Tests
+      run: |
+        python -m unittest tests
