--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Build Docker Image
       run: docker build -t c-gans .
     - name: Run Docker Container
-      run: docker run --rm -it --entrypoint bash c-gans
+      run: docker run --rm --entrypoint bash c-gans
     - name: Lint With flake8
       run: |
         pip install flake8 -- dev
