--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,7 +16,7 @@ jobs:
       run: docker run --rm --entrypoint bash c-gans
     - name: Lint With flake8
       run: |
-        pip install flake8 -- dev
+        pip install flake8
         flake8 . --count -- --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Run Tests
