--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,5 +12,20 @@ jobs:
       uses: actions/checkout@v2
     - name: Build Docker Image
       run: docker build -t c-gans .
-    - name: Run Black & Tests
-      run: docker run --rm --entrypoint ./run_black_and_tests.sh c-gans
+    - name: Run Tests
+      run: docker run --rm c-gans "-m unittest tests/*test*"
+    - name: Run Black
+      uses: lgeiger/black-action@v1.0.1
+      with:
+        args: .
+    - name: Check if any files modified
+      id: git-check
+      run: echo ::set-output name=modified::$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)
+    - name: Push changes
+      if: steps.git-check.outputs.modified == 'true'
+      run: |
+        git config --global user.name 'Matthew James'
+        git config --global user.email 'matt.james96@hotmail.co.uk'
+        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+        git commit -am "Black Changes"
+        git push
